# windowCNV

./: README.md  Task 2A original infercnvpy.ipynb  pyproject.toml
windowCNV/: __init__.py  inference.py  plotting.py  preprocess.py  simulate.py  smoothing.py
windowCNV/tests/: Task 2A WindowCNV.ipynb  Task 2A original infercnvpy.ipynb  Task 3 PBMC_4k_10x.ipynb
windowCNV/tests/data/: mart_export_GRCh38.p14.txt
