[project]
name = "windowCNV"
version = "0.0.1"
authors = [
  { name="Carol Li", email="jli401@jh.edu" },
]
description = "A window-based refinement of inferCNV for more accurate CNV detection from single-cell RNA-seq data."
readme = "README.md"
requires-python = ">=3.10, <3.12"

keywords = ["CNV", "single-cell", "RNA-seq", "bioinformatics", "infercnv"]

dependencies = [
    "scanpy>=1.10",
    "anndata>=0.8.0",
    "numpy>=1.20",
    "pandas>=1.3",
    "scipy>=1.7",
    "matplotlib>=3.4",
    "seaborn>=0.11",
    "tqdm",
    "pyyaml",
    "numba>=0.56,<0.59",
    "pytoml"
]

[project.urls]
Homepage = "https://github.com/Li-Jiabei/windowCNV"

